--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -104,3 +104,36 @@
     color: #0fbe9f;
 
 }
+
+.samazon-favorite-button {
+
+    border-radius: 2px;
+
+    border: solid 1px #0fbe9f;
+
+    background-color: #ffffff;
+
+}
+
+
+.text-favorite {
+
+    color: #0fbe9f;
+}
+
+.user-edit-label {
+
+  cursor: pointer;
+
+  cursor: hand;
+
+}
+
+.samazon-favorite-add-cart {
+
+    border-radius: 2px;
+
+    background-color: #0fbe9f;
+
+}
+
